[gd_scene load_steps=4 format=3 uid="uid://persona_editor_popup"]

[ext_resource type="Script" path="res://scripts/PersonaEditorPopup.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_popup"]
bg_color = Color(0.12, 0.12, 0.14, 0.98)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.4, 0.6, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.5)
shadow_size = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(0.25, 0.25, 0.3, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
content_margin_left = 15
content_margin_top = 10
content_margin_right = 15
content_margin_bottom = 10

[node name="PersonaEditorPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PopupPanel" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(600, 500)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_popup")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PopupPanel"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PopupPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="CenterContainer/PopupPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Edit Your Persona"
horizontal_alignment = 1

[node name="Description" type="Label" parent="CenterContainer/PopupPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.8, 1)
text = "Define how the world sees you. These details help shape your story."
horizontal_alignment = 1
autowrap_mode = 2

[node name="HSeparator" type="HSeparator" parent="CenterContainer/PopupPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="FieldsContainer" type="VBoxContainer" parent="CenterContainer/PopupPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="NameBox" type="HBoxContainer" parent="CenterContainer/PopupPanel/MarginContainer/VBoxContainer/FieldsContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="CenterContainer/PopupPanel/MarginContainer/VBoxContainer/FieldsContainer/NameBox"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Name:"

[node name="PersonaNameInput" type="LineEdit" parent="CenterContainer/PopupPanel/MarginContainer/VBoxContainer/FieldsContainer/NameBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Your character's name (optional)"

[node name="SexBox" type="HBoxContainer" parent="CenterContainer/PopupPanel/MarginContainer/VBoxContainer/FieldsContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="CenterContainer/PopupPanel/MarginContainer/VBoxContainer/FieldsContainer/SexBox"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Sex:"

[node name="PersonaSexOption" type="OptionButton" parent="CenterContainer/PopupPanel/MarginContainer/VBoxContainer/FieldsContainer/SexBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 35)
layout_mode = 2

[node name="SpeciesBox" type="HBoxContainer" parent="CenterContainer/PopupPanel/MarginContainer/VBoxContainer/FieldsContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="CenterContainer/PopupPanel/MarginContainer/VBoxContainer/FieldsContainer/SpeciesBox"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Species:"

[node name="PersonaSpeciesOption" type="OptionButton" parent="CenterContainer/PopupPanel/MarginContainer/VBoxContainer/FieldsContainer/SpeciesBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 35)
layout_mode = 2

[node name="PersonaRaceContainer" type="HBoxContainer" parent="CenterContainer/PopupPanel/MarginContainer/VBoxContainer/FieldsContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="CenterContainer/PopupPanel/MarginContainer/VBoxContainer/FieldsContainer/PersonaRaceContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Pony Race:"

[node name="PersonaRaceOption" type="OptionButton" parent="CenterContainer/PopupPanel/MarginContainer/VBoxContainer/FieldsContainer/PersonaRaceContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 35)
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/PopupPanel/MarginContainer/VBoxContainer/FieldsContainer"]
layout_mode = 2

[node name="AppearanceLabel" type="Label" parent="CenterContainer/PopupPanel/MarginContainer/VBoxContainer/FieldsContainer"]
layout_mode = 2
text = "Appearance Description"

[node name="PersonaAppearanceInput" type="TextEdit" parent="CenterContainer/PopupPanel/MarginContainer/VBoxContainer/FieldsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Describe your physical appearance, style, notable features..."
wrap_mode = 1

[node name="HSeparator3" type="HSeparator" parent="CenterContainer/PopupPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="CenterContainer/PopupPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 20

[node name="CancelButton" type="Button" parent="CenterContainer/PopupPanel/MarginContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "Cancel"

[node name="SaveButton" type="Button" parent="CenterContainer/PopupPanel/MarginContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 1, 0.6, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "Save"
